# sensor_pack_rs

./: Cargo.toml  README.md  memory.x
.cargo/: config.toml
src/: lib.rs  main.rs
src/lis2mdl/: aaa.rs  mod.rs  reg.rs
src/lps22hh/: mod.rs  reg.rs
src/lsm6dso/: mod.rs  reg.rs
