[package]
edition = "2021"
name = "sensor_pack"
version = "0.1.0"
authors = ["LorenzoCucchi <lorenzo.cucchi@skywarder.eu>"]
resolver = "2"

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-storage = "0.3.1"

cortex-m-rt = "0.7.3"
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }

embassy-executor = { version = "0.5.0", features = ["task-arena-size-1024", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers", "executor-interrupt"] }
embassy-sync = { version = "0.5.0" }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }

embassy-stm32 = { version = "0.1.0", features = ["defmt", "stm32f756zg", "unstable-pac", "memory-x", "time-driver-any","exti" ]  }

bitvec = { version = "1.0", default-features = false, features = ["atomic"] }

[profile.release]
debug = 2
